@@ -1,4 +1,3 @@
 
 TODO:
 - use wdata for writing/reading world data
-- rename to distinguish from upstream
