@@ -1,6 +1,6 @@
-name = wardrobe
+name = wardrobe_ad
 description = A wardrobe that can be used to register & set new skins for players.
 version = 1.3
 author = prestidigitator, Jordan Irwin (AntumDeluge)
 depends = default, player_api
-optional_depends = wool
+optional_depends = wardrobe, wool
