@@ -3,6 +3,7 @@ v1.4
 ----
 - prev/next buttons placed closer together
 - added option to show previews
+- renamed to "wardrobe_ad"
 
 v1.3
 ----
